<resources>
    <string name="app_name">CarBeaver</string>
    <string name="action_settings">Ustawienia</string>
    <string name="login">Logowanie</string>
    <string name="signup">Rejestracja</string>
    <string name="email">E-mail</string>
    <string name="password">Hasło</string>
    <string name="password_repeat">Powtórz hasło</string>
    <string name="logon">Zaloguj</string>
    <string name="newOrder">Nowe zamówienie</string>
    <string name="myOrders">Moje zamówienia</string>
    <string name="register">Zarejestruj</string>
</resources>
